service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-allocator-service
spec:
  type: NodePort
  selector:
    app: token-allocator
  ports:
    - name: https
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-allocator
  labels:
    app: token-allocator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: token-allocator
  template:
    metadata:
      labels:
        app: token-allocator
    spec:
      containers:
      - name: token-allocator
        image: docker.io/trota/token-allocator:0.1.31
        terminationMessagePath: "/tmp/allocator-crash-log"
        terminationMessagePolicy: File
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            port: 8000
          initialDelaySeconds: 300
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            port: 8000
          initialDelaySeconds: 300
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: allocator-w3-secret-volume
          mountPath: "/home/service/w3certs"
        - name: w3-ca-volume
          mountPath: "/home/service/w3ca"
        - name: allocator-ingress-secret-volume
          mountPath: "/home/service/ingresscerts"
        - name: astra-tls-volume
          mountPath: "/home/service/astracerts"
        - name: astra-ca-volume
          mountPath: "/home/service/astraca"
      volumes:
      - name: allocator-w3-secret-volume
        secret:
          secretName: allocatorw3secret
      - name: w3-ca-volume
        secret:
          secretName: w3ca
      - name: allocator-ingress-secret-volume
        secret:
          secretName: allocatoringresssecret
      - name: astra-ca-volume
        secret:
          secretName: astraca
      - name: astra-tls-volume
        secret:
          secretName: astratls
